[package]
name = "goose"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rsa = "0.9"
serde = { version = "1", features = ["derive"] }
json = { package = "serde_json", version = "1" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

simplelog = "0.12"
log = "0.4"

thiserror = "1"
