[package]
name = "goose"
version = "0.0.1"
edition = "2021"

[dependencies]
rand = "0.8"
rsa = "0.9"
serde = { version = "1", features = ["derive", "rc"] }
json = { package = "serde_json", version = "1" }
yaml = { package = "serde_yaml", version = "0.9" }
tokio = { version = "1", features = ["full"] }
simplelog = "0.12"
log = "0.4"
thiserror = "1"
atomic = { package = "portable-atomic", version = "1", features = ["float"] }


# tch = "0.13"
# ort = "1.15"
